<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_name"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="@string/who_are_you"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/button_moderator_mode"
        app:layout_constraintEnd_toEndOf="@id/button_student_mode"
        app:layout_constraintStart_toStartOf="@id/button_student_mode" />

    <Button
        android:id="@+id/button_student_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="250dp"
        android:text="@string/student"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/button_moderator_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/moderator"
        app:layout_constraintBottom_toTopOf="@id/button_student_mode" />


</androidx.constraintlayout.widget.ConstraintLayout>