<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.StudentsTimetable.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/MyProgressBarStyle"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/homework_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:hint="@string/homework">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/homework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.StudentsTimetable.TextView"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/homework_layout"
        android:layout_marginBottom="10dp"
        android:hint="@string/comment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.StudentsTimetable.TextView"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/comment_layout"
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/divider4"
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingStart="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/hint"
        android:text="@string/lesson_days"
        android:paddingEnd="15dp"
        app:drawableEndCompat="@drawable/ptr"
        app:drawableTint="@color/hint"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/day"
        android:background="?android:attr/listDivider" />


    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>