<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_group_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/group_id"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/font"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/join"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textView_create_group"
        />

    <TextView

        android:id="@+id/textView_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/have_not_got_group"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        />

    <ProgressBar
        android:id="@+id/registration_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_group_id" />

</androidx.constraintlayout.widget.ConstraintLayout>